@@ -1797,7 +1797,7 @@
               <align>left</align>
               <aligny>center</aligny>
             </control>
-            <control type="button" id="311">
+            <control_off type="button" id="311">
               <posx>0</posx>
               <posy>45</posy>
               <description>aktivate tethering</description>
@@ -1811,8 +1811,8 @@
               <onright>62</onright>
               <texturefocus>MenuItemFO.png</texturefocus>
               <texturenofocus>MenuItemNF.png</texturenofocus>
-            </control>
-            <control type="button" id="312">
+            </control_off>
+            <control_off type="button" id="312">
               <posx>0</posx>
               <posy>83</posy>
               <description>deaktivate tethering</description>
@@ -1826,6 +1826,45 @@
               <onright>62</onright>
               <texturefocus>MenuItemFO.png</texturefocus>
               <texturenofocus>MenuItemNF.png</texturenofocus>
+            </control_off>
+            <control type="radiobutton" id="311">
+              <posx>0</posx>
+              <posy>45</posy>
+              <description>Wifi Tether</description>
+              <width>750</width>
+              <height>40</height>
+              <font>font13</font>
+              <textcolor>grey2</textcolor>
+              <focusedcolor>white</focusedcolor>
+              <label>Turn ON/OFF</label>
+              <onup>310</onup>
+              <ondown>312</ondown>
+              <onclick>RunScript("special://skin/scripts/tether_wifi_toggle.py")</onclick>
+              <selected>Skin.HasSetting(tether_wifi)</selected>
+              <texturefocus>MenuItemFO.png</texturefocus>
+              <texturenofocus>MenuItemNF.png</texturenofocus>
+              <onleft>9000</onleft>
+              <onright>62</onright>
+            </control>
+            <control type="radiobutton" id="312">
+              <posx>0</posx>
+              <posy>83</posy>
+              <description>Wifi Tether</description>
+              <width>750</width>
+              <height>40</height>
+              <font>font13</font>
+              <textcolor>grey2</textcolor>
+              <focusedcolor>white</focusedcolor>
+              <label>Turn ON/OFF</label>
+              <onup>311</onup>
+              <ondown>306</ondown>
+              <onclick>RunScript("special://skin/scripts/tether_wifi_toggle.py")</onclick>
+              <selected>Skin.HasSetting(tether_wifi)</selected>
+              <texturefocus>MenuItemFO.png</texturefocus>
+              <texturenofocus>MenuItemNF.png</texturenofocus>
+              <onleft>9000</onleft>
+              <onright>62</onright>
+              <visible>false</visible>
             </control>
           </control>
         </control>
