@@ -1,5 +1,7 @@
 [B]3.1.7[/B]
 - dialog yes no increased with zoom
+- changed radiobutton and script for Tether Wifi on/off
+- added update script for Helgeinterface
 
 [B]3.1.6[/B]
 
